<resources>
    <string name="app_name">Trivia App</string>
    <string name="start">Start</string>
    <string name="number_of_questions">Number of questions:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="category">Category:</string>
    <string name="type_of_questions">Type of questions:</string>
    <string name="finish">FINISH</string>


    <string-array name="numberOf">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="dificulty">
        <item>any</item>
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>


    <string-array name="type">
        <item>any</item>
        <item>multiple</item>
        <item>true/false</item>
    </string-array>

    <string-array name="category">
        <item>any</item>
        <item>General Knowledge</item>
        <item>Books</item>
        <item>Film</item>
        <item>Music</item>
        <item>Television</item>
        <item>Video Games</item>
        <item>Board Games</item>
        <item>Science and Nature</item>
        <item>Computers</item>
        <item>Geography</item>
        <item>Art</item>
        <item>Animals</item>
        <item>Celebrities</item>
        <item>Mathematics</item>
        <item>Comics</item>
        <item>Gadgets</item>
        <item>Cartoon and Animations</item>
        <item>Vehicles</item>
        <item>Sports</item>
        <item>Mitology</item>
        <item>History</item>
        <item>Politics</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
