<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/triviaImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/trivia" />

    <LinearLayout
        android:id="@+id/preGameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/number_of_questions"/>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/question_category"
            android:entries="@array/numberOf"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/difficulty"/>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/dificulty"
            android:entries="@array/dificulty"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/category"/>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:entries="@array/category"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/type_of_questions"/>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            android:entries="@array/type"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/start_btn"
            android:text="@string/start"
            android:textColor="@android:color/holo_red_light"
            android:background="@android:color/holo_blue_light"
            android:layout_margin="10dp" />


    </LinearLayout>

</LinearLayout>